[tool.poetry]
name = "cqlalchemy"
version = "4.1.1-alpha"
description = "An intuitive, pragmatic, and beautiful database toolkit for Apache Cassandra"
authors = ["Iroiso Ikpokonte <iroiso@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.3"
schema = "^0.7.5"
cassandra-driver = "^3.27.0"
lz4 = "^4.3.2"
blinker = "^1.6.2"
bidict = "^0.22.1"
black = "^23.3.0"
bcrypt = "^4.0.1"
babel = "^2.12.1"
marshmallow = "^3.20.1"
orjson = "^3.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


