[project]
name = "cqlalchemy"
version = "3.29.3"
description = "An intuitive, pragmatic, and beautiful database toolkit for Apache Cassandra"
authors = [{ name = "Iroiso Ikpokonte", email = "iroiso@live.com" }]
requires-python = "==3.13.*"
readme = "README.md"
dependencies = [
    "arrow>=1.2.3,<2",
    "schema>=0.7.5,<0.8",
    "cassandra-driver==3.29.3",
    "lz4>=4.3.2,<5",
    "blinker>=1.6.2,<2",
    "bidict>=0.22.1,<0.23",
    "black>=23.3.0,<24",
    "bcrypt>=4.0.1,<5",
    "babel>=2.12.1,<3",
    "marshmallow>=3.20.1,<4",
    "orjson>=3.11.5,<4",
    "python-snappy>=0.7.3",
    "multidict>=6.7.0",
]

[build-system]
requires = ["uv-build>=0"] 
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "./"
module-name = "cqlalchemy"
